use keyword 'final' whenever sensible